[metadata]
name = estraces
description = Traces and trace header set Python library for side-channel analysis.
author = eshard
author_email = estraces@eshard.com
version = 1.6.2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/eshard/estraces
project_urls = 
  eShard=https://www.eshard.com
  Documentation=https://eshard.gitlab.io/estraces
  Issues=https://gitlab.com/eshard/estraces/issues
classifiers =
  Programming Language :: Python :: 3.6
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: Jupyter
  Framework :: IPython
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
  Topic :: Scientific/Engineering
  Topic :: Security
  Topic :: Software Development
  Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6.0
install_requires =
  numpy
  h5py
  trsfile
  psutil
tests_require =
  pytest
  mock
  memory_profiler
pytest = "*"
test_suite = tests

[options.packages.find]
exclude =
    tests
